End of day commit. Trying to fix spacing on mobile.

--- a/src/pages/landing/mobilelanding.css
+++ b/src/pages/landing/mobilelanding.css
@@ -90,10 +90,36 @@
         font-size: 12px;
     }
 
+    .HeroPaymentHistory {
+        margin-left: 27px;
+        margin-right: 0;
+
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
     .HeroPaymentHistoryLargeText {
         font-size: 14px;
         white-space: nowrap;
         margin-right: 12px;
+    }
+
+    #NoMobile {
+        width: 0 !important;
+        height: 0 !important;
+        opacity: 0 !important;
+        font-size: 0 !important;
+    }
+
+    #HeroProfileFeatures {
+        padding: 4px 10px 4px 10px;
+
+        font-size: 14px;
+        color: white;
+        background-color: #FA0369;
+        border-radius: 20px;
+        white-space: nowrap;
     }
 
 }
